# Sekai-Matrix-UserBot

./: .gitignore  README.md  pyproject.toml
src/database/: methods.py
src/mxuserbot/: __main__.py
src/mxuserbot/core/: callback.py  loader.py  types.py  utils.py
src/mxuserbot/core/web/: index.html
src/mxuserbot/core/web/api/: locale.json  main.py
src/mxuserbot/modules/community/: astolfo.py  catgirl.py  lastfm.py  msc.py  purgeallmymessages.py  stickers.py  test.py  tiktok.py
src/mxuserbot/modules/core/: help.py  loader.py  mdl.py  ping.py  set_prefix.py
src/userbot/: __init__.py
src/userbot/core/: bot.py  callback.py  loader.py  methods.py  security.py
src/userbot/modules/: reloader.py  voice_msg.py
src/userbot/modules/community/: catgirl.py  hello.py
src/userbot/modules/core/: help.py  init_client.py  loader.py  message_cb.py  reloader.py  set_prefix.py
