[project]
name = "sekai-matrix-userbot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiosqlite>=0.22.1",
    "asyncpg>=0.31.0",
    "av>=17.0.0",
    "commonmark>=0.9.1",
    "googletrans>=4.0.2",
    "loguru>=0.7.3",
    "mautrix[encryption]>=0.21.0",
    "pillow>=12.2.0",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.13.1",
    "python-olm>=3.2.16",
    "requests>=2.33.1",
    "ruamel-yaml>=0.19.1",
    "sqlalchemy>=2.0.49",
    "telethon>=1.43.0",
]
